--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Poartfolio</title>
+  <title>My Portfolio</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -319,7 +319,7 @@
           </div>
           <div class="info">
             <h3>Website</h3>
-            <a href=""><span>MyPortfolio.org</span></a>
+            <a href="https://husniddin-abdullayev.netlify.app/"><span>MyPortfolio.org</span></a>
           </div>
         </div>
       </div>
